--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     <div class="section pricing" id="pricing">
         <h2>Enrollment Options</h2>
         <p><strong>Standard Package:</strong> $997 - Full course access + AI toolkit</p>
-        <p><strong>VIP Package:</strong> $2,500 - Includes 1-on-1 coaching & lifetime access</p>
+        <p><strong>VIP Package:</strong> $2,500 - Lifetime access</p>
         <a href="#" class="cta-button">Enroll Now</a>
     </div>
 </body>
