--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <div class="header">AI-Powered Online Business Accelerator</div>
     <div class="container">
         <h2 class="subheader">Learn How to Automate & Scale a Profitable Online Business Using AI in Just 6 Weeks!</h2>
-        <a href="#pricing" class="cta-button">Enroll Now</a>
+        <a href="https://www.paypal.com/ncp/payment/ABK39DA9RWTUA" class="cta-button">Enroll Now</a>
     </div>
     
     <div class="section">
@@ -53,7 +53,7 @@
         <h2>Enrollment Options</h2>
         <p><strong>Standard Package:</strong> $997 - Full course access + AI toolkit</p>
         <p><strong>VIP Package:</strong> $2,500 - Lifetime access</p>
-        <a href="#" class="cta-button">Enroll Now</a>
+        <a href="https://www.paypal.com/ncp/payment/ABK39DA9RWTUA" class="cta-button">Enroll Now</a>
     </div>
 </body>
 </html>
