--- a/index.html
+++ b/index.html
@@ -469,7 +469,7 @@
             <div class="member-access">
                 <h3>Already a Member?</h3>
                 <p>If you've already purchased the course, click below to access your digital materials.</p>
-                <a href="ebook.html" class="access-button">Access Your Course</a>
+                <a href="ebook.html" target="_blank" class="access-button">Access Your Course</a>
             </div>
         </div>
     </section>
